fixed layout issues, opted for flex layout with inner grids instead

--- a/index.html
+++ b/index.html
@@ -72,88 +72,88 @@
                 </div>
             </header>
         </div>
-        <main class="main">
+        <main class="main ">
 
             <!-- Block 2 -->
-            <section class="block2-bg">
-                <article class="block2">
-                    <div class="card1">
-                        <h2 class="card1__h2">Why Choose Us</h2>
-                        <div class="card1__txt">
-                            <p class="card1__txt--1">
-                                Tion and dislike men who are so beguiled and demoralized by desire by the charms of pleasure of the moment, so blinded by desire, that they cannot foresee
-                            </p>
-                            <p class="card1__txt--2">
-                                Dislike men who are so beguiled and demoralized by the charms of pleasure of the moment, so blinded by desire, that.
-                            </p>
+            <section class="block2-wrap">
+                <div class="block2-bg1">
+                    <article class="block2-top">
+                        <div class="card1">
+                            <h2 class="card1__h2">Why Choose Us</h2>
+                            <div class="card1__txt">
+                                <p class="card1__txt--1">
+                                    Tion and dislike men who are so beguiled and demoralized by desire by the charms of pleasure of the moment, so blinded by desire, that they cannot foresee
+                                </p>
+                                <p class="card1__txt--2">
+                                    Dislike men who are so beguiled and demoralized by the charms of pleasure of the moment, so blinded by desire, that.
+                                </p>
+                            </div>
+                            <button class="card1__btn" href="#explore">explore places</button>
                         </div>
-                        <button class="card1__btn" href="#explore">explore places</button>
-                    </div>
-                    <div class="card2">
-                        <img class="card2__img" src="./images/explore1.png" srcset="./images/explore1.svg" alt="House on top of water">
-                    </div>
-                    <div class="card3">
-                        <img class="card3__img" src="./images/explore2.png" srcset="./images/explore2.svg" alt="mountain lanscape">
-                    </div>
-                </article>
+                        <div class="card2">
+                            <img class="card2__img1" src="./images/explore1.png" srcset="./images/explore1.svg" alt="House on top of water">
+                            <img class="card2__img2" src="./images/explore2.png" srcset="./images/explore2.svg" alt="mountain lanscape">
+                        </div>
+                    </article>
+                </div>
+
+                <!-- Block 2 bottom -->
+                <div class="block2-bg2">
+                    <article class="block2-btm card4">
+                        <div class="card4__search">
+                            <i class="fa-solid fa-search" aria-hidden="true"></i>
+                            <p class="card4__txt">Search Places</p>
+                        </div>
+                        <div class="card4__select">
+                            <i class="fa-regular fa-circle-check" aria-hidden="true"></i>
+                            <p class="card4__txt">Select Places</p>
+                        </div>
+                        <div class="card4__enjoy">
+                            <i class="fa-regular fa-thumbs-up" aria-hidden="true"></i>
+                            <p class="card4__txt">Book & Enjoy</p>
+                        </div>
+                    </article>
+                </div>
             </section>
 
-            <!-- Block 3 -->
-            <section class="block3">
-                <article class="block3__wrap">
-                    <div class="block3__search">
-                        <div class="circle">
-                            <i class="fa fa-search" aria-hidden="true"></i>
-                        </div>
-                        <p class="block3__txt">Search Places</p>
-                    </div>
-                    <div class="block3__select">
-                        <i class="fa fa-check-circle-o" aria-hidden="true"></i>
-                        <p class="block3__txt">Select Places</p>
-                    </div>
-                    <div class="block3__enjoy">
-                        <i class="fa fa-thumbs-o-up" aria-hidden="true"></i>
-                        <p class="block3__txt">Book & Enjoy</p>
-                    </div>
-                </article>
+            <!-- Block 3 top-->
+             <section class="block3-wrap">
+                <div class="block3-bg1">
+                    <article class="block3-top">
+                        <h4 class="block3-top__h4">Spain</h4>
+                        <h3 class="block3-top__h3">grand spain madrid</h3>
+                        <p class="block3-top__txt">
+                            But I must explain to you how all this mistaken idea of account to denouncing pleasure and praising pain was account
+                            born and I account will give you a complete account of the system.
+                        </p>
+                        <button class="block3-top__btn">book now</button>
+                    </article>
+                </div>
+
+                <!-- Block 3 btm -->
+                <div class="block3-bg2">
+                    <article class="block3-btm">
+                        <h4 class="block3-btm__h4">Spain</h4>
+                        <h3 class="block3-btm__h3">grand spain madrid</h3>
+                        <p class="block3-btm__txt">
+                            But I must explain to you how all this mistaken idea of account to denouncing pleasure and praising pain was
+                            account
+                            born and I account will give you a complete account of the system.
+                        </p>
+                        <button class="block3-btm__btn">book now</button>
+                    </article>
+                </div>
             </section>
 
             <!-- Block 4 -->
-            <section class="block4">
-                <article class="block4__card">
-                    <h4 class="block4__h4">Spain</h4>
-                    <h3 class="block4__h3">grand spain madrid</h3>
-                    <p class="block4__txt">
-                        But I must explain to you how all this mistaken idea of account to denouncing pleasure and praising pain was account
-                        born and I account will give you a complete account of the system.
-                    </p>
-                    <button class="block4__btn">book now</button>
-                </article>
-            </section>
-
-            <!-- Block 5 -->
-            <section class="block5">
-                <article class="block5__card">
-                    <h4 class="block5__h4">Spain</h4>
-                    <h3 class="block5__h3">grand spain madrid</h3>
-                    <p class="block5__txt">
-                        But I must explain to you how all this mistaken idea of account to denouncing pleasure and praising pain was
-                        account
-                        born and I account will give you a complete account of the system.
-                    </p>
-                    <button class="block5__btn">book now</button>
-                </article>
-            </section>
-
-            <!-- Block 6 -->
-            <section class="block6">
-                <article class="block6__wrap">
-                    <h2 class="block6__h2">What Our Tourist Say</h2>
-                    <div class="block6__card">
-                        <img class="block6__img" src="./images/review.png" srcset="./images/review.svg" alt="A person from the back looking at moutain chain">
-                        <div class="block6__tile">
-                            <h3 class="block6__h3">sam sumon</h3>
-                            <p class="block6__txt"><i class="fa fa-quote-left" aria-hidden="true"></i>
+            <section class="block4-bg">
+                <article class="block4">
+                    <h2 class="block4__h2">What Our Tourist Say</h2>
+                    <div class="block4__card">
+                        <img class="block4__img" src="./images/review.png" srcset="./images/review.svg" alt="A person from the back looking at moutain chain">
+                        <div class="block4__tile">
+                            <h3 class="block4__h3">sam sumon</h3>
+                            <p class="block4__txt"><i class="fa-solid fa-quote-left" aria-hidden="true"></i>
                                 But I must explain to you how all this mistaken idea of account to denouncinpleasure and praising pain.But I must explain to you how all this mistaken idea of account to nai denouncing pleasure and praising pain was account born and I account will give you a complete account of the system was account born and I account will give you a nai the complete account of the system.
                             </p>
                         </div>
@@ -162,23 +162,25 @@
             </section>
         </main>
 
-        <footer>
-            <nav class="btm-nav">
-                <div class="logo">
-                    <a class="logo__link" href="./pages/header.html">
-                        <p class="logo__txt">bhromaon</p>
-                        <p class="logo__txt">Safe Travel Anywhere</p>
-                    </a>
-                </div>
-                <div class="social">
-                    <i class="fa fa-facebook" aria-hidden="true"></i>
-                    <i class="fa fa-twitter" aria-hidden="true"></i>
-                    <i class="fa fa-linkedin" aria-hidden="true"></i>
-                    <i class="fa fa-youtube-play" aria-hidden="true"></i>
-                    <i class="fa fa-pinterest" aria-hidden="true"></i>
-                </div>
-            </nav>
-        </footer>
+        <div class="footer-bg">
+            <footer class="footer">
+                <nav class="btm-nav">
+                    <div class="logo">
+                        <a class="logo__link" href="./pages/header.html">
+                            <p class="logo__txt">bhromaon</p>
+                            <p class="logo__txt">Safe Travel Anywhere</p>
+                        </a>
+                    </div>
+                    <div class="social">
+                        <i class="fa fa-facebook" aria-hidden="true"></i>
+                        <i class="fa fa-twitter" aria-hidden="true"></i>
+                        <i class="fa fa-linkedin" aria-hidden="true"></i>
+                        <i class="fa fa-youtube-play" aria-hidden="true"></i>
+                        <i class="fa fa-pinterest" aria-hidden="true"></i>
+                    </div>
+                </nav>
+            </footer>
+        </div>
     </div>
     <script type="module" src="/main.js"></script>
 </body>
